Try a workaround for dockerhub: All nodes which are allocated for this job are already filled.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,4 +10,4 @@ services:
         module use /usr/share/modulefiles
         module load mpi/openmpi-x86_64
         echo -e "geometry\nH 0 0 0\nH 0 0 1\nend\nbasis\nH library STO-3G\nend\ntask dft energy" > /tmp/h2.nw        
-        mpiexec --allow-run-as-root -np 1 nwchem_openmpi /tmp/h2.nw
+        nwchem_openmpi /tmp/h2.nw
